# AsEn-ShaderEditor

./: CMakeLists.txt  Readme.md  download-resources.bat  download-resources.sh  download-win64.bat
src/: CMakeLists.txt
src/cpp/: types.h  vk_types.h
src/pipeline_inc/: BrokenNonuniform-shared.as  GeometryCulling-1-shared.as  GeometryCulling-2-shared.as  ModelTypes.as  NonUniform-Stress-shared.as  NonUniform-VB-shared.as  NonUniform-shared.as
src/pipelines/: ModelShared.as
src/pipelines/particles/: Dots-gs-fp16.as  Dots-gs.as  Dots-i-fp16.as  Dots-i.as  Dots-tl-fp16.as  Dots-tl.as  Rays-gs-fp16.as  Rays-gs.as  Rays-i-fp16.as  Rays-i.as  Rays-tl-fp16.as  Rays-tl.as
src/pipelines/perf/: Blur-5-down.as  Blur-5-up.as  Blur-6-down.as  Blur-6-up.as  CircleQuadOverdraw-1.as  CircleQuadOverdraw-2.as  IndirectDraw.as  Subgroups-2a.as  Subgroups-2b.as  Subgroups-2c.as  TexLookup-1a.as  TexLookup-1b.as
src/pipelines/samples/: ColoredSpheres-RevZ.as  Cubemap.as  DebugTBN.as  DeferredTexturing-pass1.as  DeferredTexturing-pass2.as  Dispersion2D-area.as  Dispersion2D-rays.as  FSBarycentric.as  FakeGlow.as  FragmentDensity.as  MeshShader-Cubes.as  Model-Cubemap.as  Model-RT.as  Model.as  OIT-LinkedList1.as  OIT-LinkedList2.as  Parallax-Sphere2.as  Parallax.as  Planet-1.as  Planet-2.as  SS-Particles-Scene.as  ShadingRate.as  ShadowMap-pass1.as  ShadowMap-pass2.as  Smoke-2.as  VisibilityBuffer-pass1.as  VisibilityBuffer-pass2.as
src/pipelines/sphere/: SphericalCube-1.as  SphericalCube-2.as  SphericalCube-3.as  SphericalCube-5a.as  SphericalCube-5b.as  UVSphere-2.as
src/pipelines/tests/: BrokenNonuniform-Samp.as  BrokenNonuniform-Tex.as  IndirectDraw.as  NanVertex.as  ProceduralGrid.as  ProjectSphere.as  Subpass1.as  Subpass2.as  TriangleBarycentrics.as  Triangulation.as  UVDerivatives.as  WorldPosReconstruction.as
src/pipelines/tools/: SphereNoise-Parlx.as  SphereNoise-Tess.as  Terrain.as
src/script_inc/samples/: GenColoredSpheres.as
src/script_inc/tools/: SphereNoise.as  TerrainNoise.as  TileableNoise.as  VolumeNoise.as
src/scripts/callable/: BrokenNonuniform-GenImages.as  GenParallaxCubemap.as  GenPlanet.as  NonUniform-GenImages.as
src/scripts/color-space/: HDR-Display.as  sRGB-Blend.as  sRGB-Blend2.as  sRGB-Present.as  sRGB-Upscale.as  sRGBTest.as
src/scripts/compute/: BufferReference.as  PrefixScan-1.as  PrefixScan-2.as  PrefixScan-3.as  UniqueIDs-1.as
src/scripts/games/: 2d-Labyrinth.as  3d-Flight.as
src/scripts/gbuffer-classify/: MaterialDepthBuffer.as
src/scripts/geom-cull/: FrustumCulling.as  GeometryCulling-1.as  (+7 more)
src/shaders/: ModelMaterial.glsl  Particles-Simulation.glsl  Skyline.glsl  Transform.glsl  glsl.h  slang-shader.h
(+384 files in other folders)
